# CustomGauge

./: CMakeLists.txt  Gauge.qml  Main.qml.autosave  README.md  main.cpp
